--- a/index.html
+++ b/index.html
@@ -7,5 +7,85 @@
   </head>
   <body>
 
+    <div class="header">
+
+      <div class="logo">
+        <img src="./resources/images/img-myt-logo.jpg" alt="MyTimesLogo">
+        <p>My Times</p>
+      </div>
+
+      <div class="nav">
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </div>
+
+    </div>
+
+    <div class="main container">
+      <div class="column">
+        <div class="large">
+          <div class="top">
+            <div class="image">
+              <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+            </div>
+            <p>
+              MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+            </p>
+          </div>
+
+          <div class="bottom">
+            <div class="left">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p>
+                PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+              </p>
+              <h2 class="image">Earth Spins Backwards for 2017</h2>
+            </div>
+
+            <div class="right">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>
+                Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+              </p>
+              <h2 class="on_image">Research Shows Cameras Erase Memory</h2>
+            </div>
+          </div>
+
+
+
+        </div>
+
+        <div class="medium">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p>
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+          </p>
+          <h2 class="image">Cats in Control-Is It a Thing?</h2>
+          <p>
+            BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+          </p>
+        </div>
+
+        <div class="small">
+          <img src="" alt="">
+          <h3></h3>
+          <p></p>
+          <span class="gray">Cat Emoji Goes Viral</span>
+          <span class="gray">Buy Youtube Views</span>
+          <span class="gray">Home Business Advertising Ideas</span>
+          <span class="gray">Advertising Internet Online</span>
+          <span class="gray">Illustration in Marketing Materials</span>
+          <span class="gray">Finally a Top Secret Way You Can</span>
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+
   </body>
 </html>
