--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
               <p>
                 PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
               </p>
-              <h2 class="image">Earth Spins Backwards for 2017</h2>
+              <div class="image">
+                <h2>Earth Spins Backwards for 2017</h2>
+              </div>
+
             </div>
 
             <div class="right">
