Update changes on detail.

--- a/resources/images/MyTimes.htm
+++ b/resources/images/MyTimes.htm
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+<!-- saved from url=(0063)file:///Users/bs_designer/Desktop/Codecademy/MyTimes/index.html -->
+<html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <title>MyTimes</title>
-    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./MyTimes_files/style.css" type="text/css">
   </head>
   <body>
 
     <div class="header">
 
       <div class="logo">
-        <img src="./resources/images/img-myt-logo.jpg" alt="MyTimesLogo">
+        <img src="./MyTimes_files/img-myt-logo.jpg" alt="MyTimesLogo">
         <p>My Times</p>
       </div>
 
       <div class="nav">
-        <span><a href="#">World</a></span>
-        <span><a href="#">U.S.</a></span>
-        <span><a href="#">Tech</a></span>
-        <span><a href="#">Science</a></span>
+        <span><a href="file:///Users/bs_designer/Desktop/Codecademy/MyTimes/index.html#">World</a></span>
+        <span><a href="file:///Users/bs_designer/Desktop/Codecademy/MyTimes/index.html#">U.S.</a></span>
+        <span><a href="file:///Users/bs_designer/Desktop/Codecademy/MyTimes/index.html#">Tech</a></span>
+        <span><a href="file:///Users/bs_designer/Desktop/Codecademy/MyTimes/index.html#">Science</a></span>
       </div>
 
     </div>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="small">
-          <img src="./resources/images/img-news-bite.png" alt="cookie">
+          <img src="./MyTimes_files/img-news-bite.png" alt="cookie">
           <h3>NEWS BITES</h3>
           <p></p>
           <span class="gray">Cat Emoji Goes Viral</span>
@@ -96,21 +96,29 @@
 
     </div>
 
-    <footer>
-      <div class="info">
-          <span class="title">MY Times</span>
-        <nav>
-          <span>World</span>
-          <span>U.S.</span>
-          <span>Tech</span>
-          <span>Science</span>
-        </nav>
+    <footer class="container" id="footer">
+
+      <div class="logo">
+        <h4>MY Times |</h4>
       </div>
+
+      <div class="nav" id="footer_nav">
+        <span>World</span>
+        <span>U.S.</span>
+        <span>Tech</span>
+        <span>Science</span>
+      </div>
+
       <div class="copy">
-        <p>&copy 2016, My Times (A Division of Codecademy bite)</p>
+        <p>© 2016, My Times (A Division of Codecademy bite)</p>
+
       </div>
+
     </footer>
 
 
-  </body>
-</html>
+
+
+  
+
+</body></html>
